Настройка ссылок на сайте

--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
         </header>
         <div class="mobile-nav__body">
             <ul class="mobile-nav__list">
-                <li class="mobile-nav__item"><a class="mobile-nav__link">Техника</a></li>
-                <li class="mobile-nav__item"><a class="mobile-nav__link">Оборудование</a></li>
-                <li class="mobile-nav__item"><a class="mobile-nav__link">Услуги</a></li>
-                <li class="mobile-nav__item"><a class="mobile-nav__link">План работы</a></li>
+                <li class="mobile-nav__item"><a class="mobile-nav__link" href="#technique">Техника</a></li>
+                <li class="mobile-nav__item"><a class="mobile-nav__link" href="#equipment">Оборудование</a></li>
+                <li class="mobile-nav__item"><a class="mobile-nav__link" href="#service">Услуги</a></li>
+                <li class="mobile-nav__item"><a class="mobile-nav__link" href="#plan">План работы</a></li>
             </ul>
             <div class="nav__contacts nav__contacts_mt">
                 <div class="nav__contact nav__contact-1 btn-popup" data-request="#btn-request-tel">
@@ -214,16 +214,16 @@
                 <div class="nav__navigation">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a class="nav__link">Техника</a>
+                            <a class="nav__link" href="#technique">Техника</a>
                         </li>
                         <li class="nav__item">
-                            <a class="nav__link">Оборудование</a>
+                            <a class="nav__link" href="#equipment">Оборудование</a>
                         </li>
                         <li class="nav__item">
-                            <a class="nav__link">Услуги</a>
+                            <a class="nav__link" href="#service">Услуги</a>
                         </li>
                         <li class="nav__item">
-                            <a class="nav__link">План работы</a>
+                            <a class="nav__link" href="#plan">План работы</a>
                         </li>
                     </ul>
                 </div>
@@ -315,7 +315,7 @@
         </div>
     </header>
     <main class="main">
-        <section class="technique">
+        <section class="technique" id="technique">
             <div class="container">
                 <h1 class="section-title section-title_mt">Наша техника</h1>
                 <ul class="car-list">
@@ -394,7 +394,7 @@
                 </ul>
             </div>
         </section>
-        <section class="equipment">
+        <section class="equipment" id="equipment">
             <div class="container">
                 <h1 class="section-title section-title_mt">Дополнительное оборудование</h1>
                 <ul class="car-list">
@@ -437,7 +437,7 @@
                 </ul>
             </div>
         </section>
-        <section class="service">
+        <section class="service" id="service">
             <div class="container">
                 <h1 class="section-title section-title_mt">Список услуг нашей компании</h1>
                 <div class="service-grid">
@@ -535,7 +535,7 @@
                 </div>
             </div>
         </section>
-        <section class="plan">
+        <section class="plan" id="plan">
             <div class="container">
                 <h1 class="section-title section-title_mt">План нашей работы</h1>
                 <div class="plan-grid">
@@ -745,16 +745,16 @@
                 <nav class="footer-grid__navigation">
                     <ul class="footer-grid__list">
                         <li class="footer-grid__item">
-                            <a href="#" class="footer-grid__link">Оборудование</a>
+                            <a class="footer-grid__link" href="#technique">Техника</a>
                         </li>
                         <li class="footer-grid__item">
-                            <a href="#" class="footer-grid__link">Услуги</a>
+                            <a class="footer-grid__link" href="#equipment">Оборудование</a>
                         </li>
                         <li class="footer-grid__item">
-                            <a href="#" class="footer-grid__link">Наши работы</a>
+                            <a class="footer-grid__link" href="#service">Услуги</a>
                         </li>
                         <li class="footer-grid__item">
-                            <a href="#" class="footer-grid__link">Контакты</a>
+                            <a class="footer-grid__link" href="#plan">План работы</a>
                         </li>
                     </ul>
                 </nav>
