Создание страницы с описанием каждого транспорта

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     <li class="car-list__item">
                         <div class="car-list__card">
                             <div class="car-list__img">
-                                <a class="car-list__info" href="#"></a>
+                                <a class="car-list__info" href="technique-more.html" data-tab="#tab1"></a>
                                 <img src="img/img-car-list-1.jpg">
                             </div>
                             <p class="car-list__type">Экскаваторная техника</p>
@@ -334,7 +334,7 @@
                     <li class="car-list__item">
                         <div class="car-list__card">
                             <div class="car-list__img">
-                                <a class="car-list__info" href="#"></a>
+                                <a class="car-list__info" href="technique-more.html" data-tab="#tab2"></a>
                                 <img src="img/img-car-list-2.png">
                             </div>
                             <p class="car-list__type">Экскаваторная техника</p>
@@ -346,7 +346,7 @@
                     <li class="car-list__item">
                         <div class="car-list__card">
                             <div class="car-list__img">
-                                <a class="car-list__info" href="#"></a>
+                                <a class="car-list__info" href="technique-more.html" data-tab="#tab3"></a>
                                 <img src="img/img-car-list-3.jpg">
                             </div>
                             <p class="car-list__type">Экскаваторная техника</p>
@@ -358,7 +358,7 @@
                     <li class="car-list__item">
                         <div class="car-list__card">
                             <div class="car-list__img">
-                                <a class="car-list__info" href="#"></a>
+                                <a class="car-list__info" href="technique-more.html" data-tab="#tab4"></a>
                                 <img src="img//img-car-list-4.jpg">
                             </div>
                             <p class="car-list__type">Автосамосвал</p>
@@ -370,7 +370,7 @@
                     <li class="car-list__item">
                         <div class="car-list__card">
                             <div class="car-list__img">
-                                <a class="car-list__info" href="#"></a>
+                                <a class="car-list__info" href="technique-more.html" data-tab="#tab5"></a>
                                 <img src="img//img-car-list-5.png">
                             </div>
                             <p class="car-list__type">Виброкатки</p>
@@ -382,7 +382,7 @@
                     <li class="car-list__item">
                         <div class="car-list__card">
                             <div class="car-list__img">
-                                <a class="car-list__info" href="#"></a>
+                                <a class="car-list__info" href="technique-more.html" data-tab="#tab6"></a>
                                 <img src="img//img-car-list-6.jpg">
                             </div>
                             <p class="car-list__type">Прицепная техника</p>
@@ -771,4 +771,5 @@
     <script src="script/radio.js"></script>
     <script src="script/validationForm.js"></script>
     <script src="script/mobileNav.js"></script>
+    <script src="script/tabs.js"></script>
 </body>
