Изменение секции с обратной связью

--- a/index.html
+++ b/index.html
@@ -677,9 +677,6 @@
                             <p class="wrap-feedback__text">Ответим на любые вопросы</p>
                             <button class="btn-request wrap-feedback__btn btn-popup btn-manage-scroll" data-request="#btn-request-tel">Связаться с нами</button>
                         </div>
-                        <div class="wrap-feedback__img">
-                            <img src="img/img-feedback.jpg">
-                        </div>
                     </div>
                     <div class="accordion">
                         <div class="accordion__item">
@@ -720,6 +717,19 @@
                                         <p>Минимальное время для предварительного заказа техники в нашей компании зависит от текущей загруженности и доступности оборудования.</p>
                                         <p>Рекомендуется осуществлять заказ как минимум за один рабочий день до начала планируемых работ, чтобы обеспечить гарантированную доступность техники и её доставку в назначенное время и место.</p>
                                         <p>Это поможет избежать задержек и убедиться в том, что все необходимые ресурсы будут предоставлены точно в срок.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion__item">
+                            <div class="accordion__head">
+                                <h3 class="accordion__title">Правда ли, что вы являетесь номер один в Могилеве и области?</h3>
+                                <div class="accordion__icon"></div>
+                            </div>
+                            <div class="accordion__body">
+                                <div class="accordion__auto-height">
+                                    <div class="accordion__wrapper">
+                                        <p>Да, абсолютно верно. Мы единственная компания в городе, которая способна осуществлять все виды строительных работ</p>
                                     </div>
                                 </div>
                             </div>
